--- a/index.html
+++ b/index.html
@@ -45,10 +45,25 @@ button{
 button:hover{background:#ffc107;}
 .qcm button{width:100%;margin:6px 0;}
 </style>
+  #footer{
+  position: fixed;
+  bottom: 12px;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 0.9;
+}
+
 </head>
 
 <body>
 <div id="container">
+  <div id="footer">
+  La Mission Locale vous souhaite un super jeu !
+</div>
+
   <canvas id="game" width="800" height="400"></canvas>
 
   <div id="start" class="overlay">
@@ -200,6 +215,12 @@ function loop(){
   ctx.strokeStyle='#1565c0';
   ctx.lineWidth=4;
   ctx.stroke();
+  
+ctx.fillStyle = '#0d47a1';
+ctx.font = '12px Arial';
+ctx.textAlign = 'center';
+ctx.textBaseline = 'middle';
+ctx.fillText('MLE', player.x, player.y);
 
   ctx.fillStyle='#0d47a1';
   ctx.font='14px Arial';
