--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@ body{
   background:#0d47a1;
   font-family:Arial,Helvetica,sans-serif;
   display:flex;
-  justify-content:center;
+  flex-direction:column;
   align-items:center;
-  height:100vh;
+  justify-content:center;
+  min-height:100vh;
 }
-#container{position:relative;}
+
+#container{
+  position:relative;
+}
+
 canvas{
   background:linear-gradient(#ffffff,#e3f2fd);
   border-radius:14px;
   box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
+
 .overlay{
   position:absolute;
   inset:0;
@@ -33,6 +39,7 @@ canvas{
   color:#0d47a1;
   border-radius:14px;
 }
+
 button{
   margin-top:15px;
   padding:12px 24px;
@@ -43,67 +50,92 @@ button{
   cursor:pointer;
 }
 button:hover{background:#ffc107;}
-.qcm button{width:100%;margin:6px 0;}
+
+.qcm button{
+  width:100%;
+  margin:6px 0;
+}
+
+#footer{
+  margin-top:12px;
+  text-align:center;
+  color:white;
+  font-size:14px;
+  font-weight:bold;
+  opacity:0.9;
+}
 </style>
- 
 </head>
 
 <body>
-<div id="container">
-  <div id="footer">
-  La Mission Locale vous souhaite un super jeu !
-</div>
 
+<div id="container">
   <canvas id="game" width="800" height="450"></canvas>
 
   <div id="start" class="overlay">
     <h2>Runner Mission Locale</h2>
     <p>Sauter pour éviter les obstacles</p>
+    <p>Objectif : battre ton score</p>
     <button id="startBtn">Démarrer</button>
   </div>
 
   <div id="question" class="overlay" style="display:none"></div>
 </div>
 
+<div id="footer">
+  La Mission Locale est vous souhaite un super jeu !
+</div>
+
 <script>
 const canvas = document.getElementById('game');
 const ctx = canvas.getContext('2d');
 
-let state='menu';
-let score=0, level=1, speed=4, immunity=0;
+let state = 'menu';
+let score = 0;
+let level = 1;
+let speed = 4;
+let immunity = 0;
 
-const groundY=300;
-const player={x:120,y:groundY,r:22,vy:0};
-let obstacles=[];
-let lastObstacleX=0;
+const groundY = 340;
 
-const MAX_OBSTACLES=4;
-const BASE_GAP=170;
+const player = { x:120, y:groundY, r:22, vy:0 };
+let obstacles = [];
+let lastObstacleX = 0;
 
-const questions=[
- {q:'À quoi sert un CV ?',c:['Présenter ses compétences','Dormir','Jouer'],a:0},
- {q:'Un entretien sert principalement à ?',c:['Évaluer un candidat','Se reposer','Regarder un film'],a:0},
- {q:'La Mission Locale accompagne surtout les ?',c:['Jeunes','Entreprises','Enfants'],a:0},
- {q:'Qu’est-ce qu’une formation ?',c:['Un apprentissage','Un loisir','Un jeu'],a:0},
- {q:'Pourquoi préparer un entretien ?',c:['Pour réussir','Pour s’amuser','Pour dormir'],a:0},
+const MAX_OBSTACLES = 4;
+const BASE_GAP = 180;
+
+// QUESTIONS (enrichies et variées)
+const questions = [
+ {q:'À quoi sert un CV ?',c:['Présenter ses compétences','Jouer','Dormir'],a:0},
+ {q:'Pourquoi préparer un entretien ?',c:['Pour réussir','Pour perdre du temps','Pour dormir'],a:0},
+ {q:'La Mission Locale accompagne surtout ?',c:['Les jeunes','Les enfants','Les retraités'],a:0},
+ {q:'Un entretien permet de ?',c:['Évaluer un candidat','Regarder un film','Se reposer'],a:0},
  {q:'Le CV doit être ?',c:['Clair et structuré','Très long','Illisible'],a:0},
- {q:'La ponctualité est ?',c:['Importante','Inutile','Interdite'],a:0}   { q:"Comment adapter son CV à une offre ?", a:["Mettre en avant les compétences demandées","Envoyer le même CV","Changer juste la police"], correct:0, points:35 },
+ {q:'La ponctualité est ?',c:['Importante','Optionnelle','Interdite'],a:0},
+ {q:'Une formation sert à ?',c:['Apprendre','Se distraire','Rien faire'],a:0},
+ {q:'Un projet professionnel permet de ?',c:['Définir son avenir','Perdre du temps','Éviter le travail'],a:0},
+ {q:'Avant un entretien, il faut ?',c:['Se préparer','Improviser','Dormir'],a:0},
+ {q:'La tenue en entretien doit être ?',c:['Adaptée','N’importe laquelle','Sale'],a:0}
 ];
 
-let lastQuestions=[];
+let lastQuestions = [];
 
-document.getElementById('startBtn').onclick=()=>{
+document.getElementById('startBtn').onclick = () => {
   document.getElementById('start').style.display='none';
   resetGame();
   state='play';
 };
 
 function resetGame(){
-  score=0; level=1; speed=4;
+  score=0;
+  level=1;
+  speed=4;
   obstacles=[];
+  player.y=groundY;
+  player.vy=0;
   immunity=120;
   lastQuestions=[];
-  player.y=groundY; player.vy=0;
 }
 
 function jump(){
@@ -115,24 +147,26 @@ window.addEventListener('keydown',e=>{if(e.code==='Space') jump();});
 canvas.addEventListener('click',jump);
 
 function spawnObstacle(){
-  const air=level>=3 && Math.random()<0.3;
+  const air = level>=3 && Math.random()<0.3;
   obstacles.push({
     x:canvas.width+30,
-    y:air ? groundY-80-Math.random()*40 : groundY+player.r-10,
-    w:26,h:40
+    y:air ? groundY-90-Math.random()*40 : groundY+player.r-10,
+    w:26,
+    h:40
   });
-  lastObstacleX=canvas.width+30;
+  lastObstacleX = canvas.width+30;
 }
 
 function showQuestion(){
   state='question';
 
-  let available=questions.filter(q=>!lastQuestions.includes(q.q));
-  if(!available.length){
+  let available = questions.filter(q=>!lastQuestions.includes(q.q));
+  if(available.length===0){
     lastQuestions=[];
     available=[...questions];
   }
-  const q=available[Math.floor(Math.random()*available.length)];
+
+  const q = available[Math.floor(Math.random()*available.length)];
   lastQuestions.push(q.q);
   if(lastQuestions.length>3) lastQuestions.shift();
 
@@ -163,65 +197,7 @@ function loop(){
 
   if(state==='play'){
     player.vy+=0.6;
-    player.y+=player.vy;
-    if(player.y>groundY){player.y=groundY;player.vy=0;}
 
-    const gap=BASE_GAP+level*10;
-    if(
-      obstacles.length<MAX_OBSTACLES &&
-      (obstacles.length===0 || canvas.width-lastObstacleX>gap) &&
-      Math.random()<0.015+level*0.001
-    ){
-      spawnObstacle();
-    }
-
-    obstacles.forEach(o=>{
-      o.x-=speed;
-      ctx.fillStyle=immunity>0?'#81c784':'#e53935';
-      ctx.fillRect(o.x,o.y,o.w,o.h);
-
-      const cx=Math.max(o.x,Math.min(player.x,o.x+o.w));
-      const cy=Math.max(o.y,Math.min(player.y,o.y+o.h));
-      const dx=player.x-cx, dy=player.y-cy;
-      if(immunity<=0 && dx*dx+dy*dy<player.r*player.r){
-        showQuestion();
-      }
-    });
-
-    obstacles=obstacles.filter(o=>o.x+o.w>0);
-    score++;
-
-    if(score%400===0){
-      level++;
-      speed+=0.4;
-    }
-    if(immunity>0) immunity--;
-  }
-
-  ctx.beginPath();
-  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fillStyle='#ffb300';
-  ctx.fill();
-  ctx.strokeStyle='#1565c0';
-  ctx.lineWidth=4;
-  ctx.stroke();
-  
-ctx.fillStyle = '#0d47a1';
-ctx.font = '12px Arial';
-ctx.textAlign = 'center';
-ctx.textBaseline = 'middle';
-ctx.fillText('MLE', player.x, player.y);
-
-  ctx.fillStyle='#0d47a1';
-  ctx.font='14px Arial';
-  ctx.fillText('Score : '+score,10,20);
-  ctx.fillText('Niveau : '+level,10,40);
-  if(immunity>0) ctx.fillText('Immunité',10,60);
-
-  requestAnimationFrame(loop);
-}
-
-requestAnimationFrame(loop);
 </script>
 </body>
 </html>
